comecei a criar o conteudo

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Título do site</title>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore dolorem quaerat ad sequi, quam architecto omnis. Libero architecto quasi, nemo culpa reprehenderit consectetur. Reprehenderit, maiores! Nesciunt aperiam nisi deleniti est.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia sequi dolorum facere non vitae autem quasi ut expedita, eveniet, animi provident, nemo doloribus nulla nesciunt voluptates laborum architecto facilis laudantium.</p>
         </article>
     </main>
 </head>
