--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título do site</title>
+    <link rel="stylesheet" href="estilos/style.css">
     <main>
         <header>
             <h1>Título do Site</h1>
